# py-js

./: Dockerfile  LICENSE  README.md  pyproject.toml  runstr.sh
src/: launchstr.sh  main.py
src/handlers/: __init__.py  htmx.py
src/static/: style.css
src/templates/: base.html  home.html
