[project]
name = "py-js"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Movsisyan", email = "movsisyan@protonmail.com" }
]
dependencies = [
    "uvicorn>=0.34.0",
    "fastapi>=0.115.11",
    "jinja2>=3.1.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff>=0.9.10",
]
